--- a/.github/workflows/twitter.yaml
+++ b/.github/workflows/twitter.yaml
@@ -30,14 +30,14 @@ jobs:
           TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-      - name: Clean Twitter Account
-        run: |
-          python twitter.py
-        env:
-          WEEKS_CUTOFF: 4
-          FAVORITE_CUTOFF: 10
-          RETWEET_CUTOFF: 10
-          TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY_TWO }}
-          TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET_TWO }}
-          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN_TWO }}
-          TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET_TWO }}
+#       - name: Clean Twitter Account
+#         run: |
+#           python twitter.py
+#         env:
+#           WEEKS_CUTOFF: 4
+#           FAVORITE_CUTOFF: 10
+#           RETWEET_CUTOFF: 10
+#           TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY_TWO }}
+#           TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET_TWO }}
+#           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN_TWO }}
+#           TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET_TWO }}
